service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlfromscratch
spec:
  type: LoadBalancer
  selector:
    app: mpg
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
