ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-ingress
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: mlfromscratch
            servicePort: 80
